--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
   schedule:
     - cron:  '51 2 * * 0'
 jobs:
-  images:
+  update:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
