--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
       with:
         branch: iana-numbers
         path: out
+        fetch-depth: 0
     - name: Create new iana-etc releases
       run: ./ci/deploy.sh
       env:
